Trying to fix white space 3

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -4,13 +4,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    overflow-x: hidden;
-    overscroll-behavior: contain;
+body,
+html,
+#root {
+    height: 100%;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+    /* takes remaining space */
 }
